notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: banka-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - image: ghcr.io/raf-si-2025/banka-2-notification-service:latest
        name: banka-2-notification-service
        ports:
        - name: http
          containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: banka-2
spec:
  selector:
    app: notification-service
  ports:
  - name: http
    port: 8083
    targetPort: 8083
